--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,3 +31,8 @@ body, input, textarea, select, button {
   font-size: 1.125rem;
   font-weight: 400;
 }
+
+a {
+  text-decoration: none;
+  color: var(--gray-500);
+}
