--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,6 @@
-// TODO
+.header {
+  margin: 2rem auto 0.125rem;
+  max-width: 700px;
+  background-color: var(---black-900);
+  padding: 0 2rem;
+}
