Adicionando estilos e botões carregar mais posts

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -14,11 +14,31 @@
   strong {
     font-size: 1.75rem;
     color: var(--white-500);
+    transition: color 0.25s;
   }
 
   p {
     font-size: 1.125rem;
     color: var(--gray-500);
     margin: 1rem 0 0.75rem 0;
+  }
+
+  &:hover {
+    strong {
+      color: var(--pink-500);
+    }
+  }
+}
+
+.carregarMaisPosts {
+  background-color: transparent;
+  color: var(--pink-500);
+  border: 0px;
+  margin-top: 3rem;
+
+  transition: filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.9);
   }
 }
