--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,5 +2,5 @@
   margin: 2rem auto 0.125rem;
   max-width: 700px;
   background-color: var(---black-900);
-  padding: 0 2rem;
+  padding-bottom: 1.5rem;
 }
