--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,55 @@
-// TODO
+.container {
+  max-width: 700px;
+  margin: 0 auto;
+
+  h1 {
+    margin-top: 5rem;
+    font-size: 3rem;
+  }
+}
+
+.banner{
+  width: 100%;
+  height: 30rem;
+  top: 0;
+  object-fit: cover;
+
+}
+
+
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 1rem 0 2rem 0;
+}
+
+.content {
+  font-size: 1.125rem;
+  color: var(--gray-500);
+
+  h1, h2, h3, h4, h5, h5 {
+    color: var(--white-500);
+    margin-bottom: 3rem;
+  }
+ }
+
+ .post {
+   margin-bottom: 3rem;
+
+   h1 {
+    font-size: 2.25rem;
+  }
+
+  ul {
+    margin: 1rem;
+  }
+
+  p {
+    margin-bottom: 1rem;
+  }
+
+  a {
+    color: var(--pink-500);
+  }
+ }
